Bug 93154 - LOOL: Save button in Impress often does not save
Summary: LOOL: Save button in Impress often does not save
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice Online
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-05 19:15 UTC by Jan Holesovsky
Modified: 2015-09-16 08:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Holesovsky 2015-08-05 19:15:32 UTC
In LibreOffice OnLine Impress, pressing the [Save] button very often does not lead to the actual saving even though the .uno:Save is apparently sent.
Comment 1 Joel Madero 2015-08-05 19:38:43 UTC
When the save is sent and then you try to close the document, does it warn that the document needs saved or does it close without the save or dialog warning that there has not been a save? 

Also - any repro steps that are consistent here?
Comment 2 Jan Holesovsky 2015-08-05 19:42:37 UTC
This is relevant only to the LibreOffice OnLine, does not affect the desktop app.  Might be good to actually create a new component in the bugzilla - LibreOffice OnLine - what do you think?  Can you please create one? :-)

As to the reproduction steps: Open a testing .odp in the LOOL Impress, mark something, make it bold, press save; and in the server logs, you get only:

9556,56,1438801819712,ToClient,Input,'uno .uno:Save'
9556,56,1438801819712,ToClient,forwardToPeer,'uno .uno:Save'
9608,1,1438801819712,ToMaster,Input,'uno .uno:Save'
Comment 3 Joel Madero 2015-08-05 20:00:40 UTC
I added LibreOffice online - I'll need to deal with versions at some point but for now it's just "unspecified"
Comment 4 Jan Holesovsky 2015-08-05 20:07:56 UTC
Joel: Thanks so much!  For the versions, I'm OK with using the git hashes in the reports for now, no problem with 'unspecified'.  Regarding the Components - can you please remove 'Base', and the 'Spreadsheet' is maybe should be changed to 'Calc'?
Comment 5 Joel Madero 2015-08-05 20:12:00 UTC
Done :)
Comment 7 Jan Holesovsky 2015-08-13 14:36:26 UTC
Adolfo: Thanks for adding here the reference! :-)

Unfortunately we still cannot close as it, as there is 2nd part to that; Mihai told me that sometimes the tiles are moved from the editing cache to the persistent one at the wrong time, making them look wrong the next time they are used / loaded.
Comment 8 Jan Holesovsky 2015-09-16 08:34:03 UTC
Setting as fixed.  We need to improve the save notification mechanism a bit, but that should be treated separately.