tdf#93154: Save button often does not save

The problem is that in tiled rendering LO doesn't always consider the
document to be modified. This solved the issue by always allowing to
save.

Change-Id: Iaf8120abadc768a07b24f42c287c50080b4e4d89