sw/source/uibase/uno/unotxdoc.cxx
@@ -136,6 +136,7 @@
 #include <swdtflvr.hxx>
 
 #include <svtools/langtab.hxx>
+#include <svtools/miscopt.hxx>
 #include <map>
 #include <set>
 #include <vector>
@@ -3224,6 +3225,8 @@ void SwXTextDocument::initializeForTiledRendering()
     // directly in twips.
     SwEditWin& rEditWin = pDocShell->GetView()->GetEditWin();
     rEditWin.EnableMapMode(false);
+    SvtMiscOptions aMiscOpt;
+    aMiscOpt.SetSaveAlwaysAllowed(true);
 }
 
 void SwXTextDocument::registerCallback(LibreOfficeKitCallback pCallback, void* pData)
